--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ellipsis-macros"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 description = "Ellipsis Solana Macros"
 license = "Apache-2.0"
@@ -10,7 +10,7 @@ license = "Apache-2.0"
 proc-macro = true
 
 [dependencies.solana-program]
-version = "*"
+version = ">=2"
 
 [dependencies.bs58]
 version = "0.4.0"
