--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ellipsis-macros"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 description = "Ellipsis Solana Macros"
 license = "Apache-2.0"
@@ -26,7 +26,4 @@ version = "1.0.7"
 
 [dependencies.syn]
 version = "1.0"
-features = [
-    "full",
-    "extra-traits",
-]
+features = ["full", "extra-traits"]
